# exaStamp

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md
contribs/: CMakeLists.txt  README
contribs/egl_viz/: h2o_egl.msp
contribs/genDropletMolRigid/: CMakeLists.txt  ConstructionConfigurationInitiale.don  Geometrie.h  MasseAtomique.h  StampV3LegacyIOStructures.cpp  StampV3LegacyIOStructures.hpp  Structure.h  genDropletMolRigid.cpp  genInputFile.sh
contribs/saru/: CMakeLists.txt
contribs/sliplink/: CMakeLists.txt  chain_init.cpp  force_rouse.cpp  force_sliplink.cpp  move_beads.cpp  move_sl.cpp  sl_analysis.cpp  sl_destroy.cpp  sl_init.cpp  sl_renew.cpp  slink.cpp  slink.h  update_sl.cpp
contribs/taz/: CMakeLists.txt  README
contribs/xstabpy/: README  example.py  potential.py  xstabpy.py
docs/notes/: BUILD.txt  CMakeLists.txt  DEBUG.txt  Doxyfile  TODO.txt  onika.txt  references.bib  task-graph-sim.txt  tins.txt  transfer_from_legacy_repo.txt  versioning_policy.txt
src/: CMakeLists.txt
src/analysis_grid/: CMakeLists.txt
src/analysis_particles/: CMakeLists.txt  compute_local_mechanical_metrics.cpp  compute_local_metrics.cpp  compute_local_structural_metrics.cpp  mechanical_cell_projection.cpp  mechanical_write_paraview.cxx  supervised_learning_classifier.cpp  write_xyz_file.cpp
src/analytics/: CMakeLists.txt  atom_cell_projection.cpp  grid_cell_particle_count.cpp  grid_cell_particle_splatting.cpp  grid_connected_components.cpp  grid_label_analysis.cpp  grid_reduction.cpp  grid_slice_analysis.cpp  histogram.cpp  histogram_cell_particles.cpp  histogram_vecnorm.cpp
src/compute/: CMakeLists.txt  avg_v_m.cu  berendsen_thermostat.cpp  compute_virial_fdotr.cpp  domain_volume.cpp  fixed_atoms.cpp  force_to_accel.cpp  force_to_accel.cu  gaussian_noise.cpp  generic_scalar_blender.cpp  generic_scalar_blender.cu  generic_scalar_copy.cpp  generic_scalar_copy.cu  generic_scalar_zero.cpp  generic_scalar_zero.cu  generic_vec3_blender.cpp  generic_vec3_blender.cu  generic_vec3_copy.cpp  generic_vec3_copy.cu  init_temperature.cpp  init_temperature_new.cpp  langevin_thermostat.cpp  material_thermostat.cpp  move_wall.cpp  move_wall_V2.cpp  piecewise_langevin_thermostat.cpp  positions_filtering.cpp  push_vec3_2nd_order_xform_minimization.cpp  simulation_thermodynamic_state.cpp  sum_forces.cu  two_sided_langevin_thermostat.cpp  version_info.cpp  wall.cpp  wall.cu  wall_v2.cpp  wall_v2.cu  zero_force_energy.cpp  zero_force_energy.cu
src/debug/: CMakeLists.txt  atom_neighbors_stats.cpp  check_temperature.cpp  debug_impulse_operator.cpp  debug_min_max_particle.cpp
src/flat_arrays/: CMakeLists.txt  push_flat_f_v.cpp  push_flat_f_v.cu  push_flat_f_v_r.cpp  push_flat_f_v_r.cu
src/io/: CMakeLists.txt  backup_r_lt.cpp  backup_r_rf_lt.cpp  bulk_lattice.cpp  dump_thermodynamic_state.cpp  dump_thermodynamic_state_rigidmol.cpp  grid_flavor.cpp  orthorhombic_lattice.cpp  print_thermodynamic_state.cpp  print_thermodynamic_state_rigidmol.cpp  print_version_info.cpp  read_dump_atoms.cpp  read_dump_molecule.cpp  read_dump_rigidmol.cpp  read_external_atom_format.cpp  read_external_atom_format_v2.cpp  read_stamp_v3.cpp  read_stamp_v4.cpp  read_xyz_file.cpp  read_xyz_file_with_xform.cpp  read_xyz_rigidmol.cpp  region_lattice.cpp  remove_merged_atoms.cpp  resize_grid_cell_values.cpp  restore_r_lt.cpp  restore_r_rf_lt.cpp  write_compact_backup.cxx  write_dump_atoms.cpp  write_dump_rigidmol.cpp  write_lmp.cpp  write_paraview.cpp  write_stamp_v3.cpp  write_stamp_v4.cpp  write_xyz.cpp  write_xyz.cxx  write_xyz_skin_file.cpp
src/mdstresslab/: CMakeLists.txt  README.md  compute_stress_grid_mdstresslab.cpp
src/mechanical/: CMakeLists.txt  average_local_field.cpp  compute_local_centrosymmetry.cpp  compute_local_entropy.cpp  compute_local_field.cpp  compute_local_mechanical_metrics.cpp  compute_local_metrics.cpp  compute_local_numneighbors.cpp  compute_local_steinhardt.cpp  compute_local_structural_metrics.cpp  compute_local_structural_metrics.cu  compute_radial_distribution_function.cpp  mechanical_cell_projection.cpp  mechanical_write_paraview.cpp  mechanical_write_paraview.cxx  supervised_learning_classifier.cpp  write_vtk.cpp.deprecated  write_xyz_file.cpp
src/molecule/: CMakeLists.txt  check_idmol.cpp  check_potential_molecules_bends.cpp  check_potential_molecules_bonds.cpp  check_potential_molecules_impropers.cpp  check_potential_molecules_torsions.cpp  cmol_global_to_local_id.cpp  compute_forces_molecules_bends.cpp  compute_forces_molecules_bends.cu  compute_forces_molecules_bonds.cpp  compute_forces_molecules_bonds.cu  compute_forces_molecules_impropers.cpp  compute_forces_molecules_impropers.cu  compute_forces_molecules_pairs.cpp  compute_forces_molecules_pairs.cu  compute_forces_molecules_torsions.cpp  compute_forces_molecules_torsions.cu  debug_angles.cpp  debug_pair_weight.cpp  extramolecular_neighbors.cpp  globalize_particle_ids.cpp  id_map.cpp  id_map_operator.cpp  init_virial_energy_correction.cpp  init_virial_energy_correction.cu  intramolecular_compute.cpp  intramolecular_pair_list.cpp  intramolecular_setup.cpp  localize_particle_ids.cpp  mol_extract_connectivity.cpp  mol_optimize_connectivity.cpp  mol_read_connectivity.cpp  molecule_check_domain.cpp  molecule_id_corrector_operator.cpp  molecule_id_operator.cpp  molecule_list.cpp  molecule_pair_weight.cpp  molecule_species.cpp  molecule_species_from_cmol.cpp  molecule_unfold.cpp  (+14 more)
src/mpi/: CMakeLists.txt  backup_r_rf_lt_move_data.cpp  simple_cost_multimat.cpp  subdomain_neighbors.cpp  type_cost_map.cpp  update_from_ghosts.cpp  update_from_ghosts.cu  update_ghosts.cpp  update_ghosts.cu
src/npt/: CMakeLists.txt  couple_npt.cpp  init_nose_hoover.cpp  init_npt.cpp  nh_omega_dot.cpp  nh_v_press.cpp  nhc_press_integrate.cpp  nhc_temp_integrate.cpp  remap_npt.cpp  setup_nose_hoover.cpp  setup_npt.cpp
src/numerical_schemes/: CMakeLists.txt  berendsen_thermostat.cpp
src/parrinellorahman/: CMakeLists.txt  convergence_push_parrinellorahman.cpp  first_push_parrinellorahman.cpp  first_push_parrinellorahman.cu  (+2 more)
(+1945 files in other folders)
