
# Pair potentials
add_subdirectory(reaction_field)
add_subdirectory(ljexp6rf)
add_subdirectory(pair_potential_template)
add_subdirectory(pair_potentials)
add_subdirectory(multimat_pair_potential)

# EAM potentials
add_subdirectory(eam)
add_subdirectory(eam_potential_template)
add_subdirectory(eam_potentials)

#add_subdirectory(LCHBOP)
#add_subdirectory(meam)
add_subdirectory(coul_dsf)
add_subdirectory(coul_wolf)
#add_subdirectory(ewald)
#add_subdirectory(snap)
#add_subdirectory(snaplegacy)
#add_subdirectory(snaplmp)
#add_subdirectory(range_potential)
#add_subdirectory(n2p2)

